# mpi-cartesian-collectives

./: CMakeLists.txt  README.md
src/: bench_cartesians.c  check_cartesians.c  tuw_bench_arg_parse.c  tuw_bench_arg_parse.h  tuw_bench_runner.h  tuw_bench_runner_comm_create.c  tuw_bench_runner_full.c  tuw_bench_setup.c  tuw_bench_setup.h  tuwcartesians.c  tuwcartesians.h
